UY-1152 combo invitation edit/view